@@ -1,3 +1,15 @@
+2022-02-03  Per Arne Vollan  <pvollan@apple.com>
+
+        [iOS][WP] Add file-ioctl telemetry
+        https://bugs.webkit.org/show_bug.cgi?id=236031
+        <rdar://88334007>
+
+        Reviewed by Darin Adler.
+
+        Add file-ioctl telemetry in the WebContent process on iOS.
+
+        * Resources/SandboxProfiles/ios/com.apple.WebKit.WebContent.sb.in:
+
 2022-02-03  Chris Dumez  <cdumez@apple.com>
 
         Start connecting SharedWorker to the WebKit2 layer
